# operon

./: .gitignore  .ralph-security  AGENTS.md  CONTEXT.md  README.md  package.json  pnpm-lock.yaml  test-wrapper.sh
.cursor/skills/prd-build-loop/: SKILL.md
apps/desktop/: index.html  package.json
apps/desktop/src/: App.tsx  app.test.ts  styles.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: docker.rs  lib.rs  main.rs  paths.rs  sidecar.rs
apps/desktop/src/components/: ApprovalCenter.tsx  AssetLibrary.tsx  CompanyWizard.tsx  ControlRoom.tsx  HandoffPanel.tsx  ObjectiveCard.tsx  OkrTreePanel.tsx  ProofWall.tsx  RhythmCenter.tsx  SettingsPanel.tsx  TaskListPanel.tsx  TranscriptTimeline.tsx  WorkerExecutionPanel.tsx
apps/desktop/src/hooks/: useCompanies.ts  (+2 more)
apps/sidecar/: package.json
apps/sidecar/src/: app.test.ts  app.ts  index.ts
docs/: Matrix-Web-PRD.md  SKILLS.md
docs/agents/: domain.md  issue-tracker.md  triage-labels.md
docs/prd/: 00-macro-shared.md  README.md
docs/prd/modules/: M01-company-workspace.md  M02-department-task.md  M03-transcript-proof.md  M04-rhythm.md  M05-control-loop.md  M06-lead-agent.md  M07-worker-agent.md  M08-handoff.md  M09-data-persistence.md  M10-runtime-sandbox.md  M11-model-router.md  M12-platform-shell.md  M16-auth-approval.md
prompts/: implement.md
scripts/: ralph.sh
specs/: README.md  architecture-review.md  current-state.md
specs/conventions/: code-style.md  testing.md
specs/implementation-plans/: active-plan.md
(+26 files in other folders)
