[package]
name = "operon-desktop"
version = "0.1.0"
description = "Operon desktop shell"
authors = ["Operon"]
edition = "2021"

[lib]
name = "operon_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
ureq = "2"
